--- a/packages/nicer-log-remover-babel/package.json
+++ b/packages/nicer-log-remover-babel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nicer-log-babel-remover",
+  "name": "nicer-log-remover-babel",
   "version": "0.0.6",
   "description": "A Babel plugin to remove usages of nicer-log in production build.",
   "main": "dist/commonjs/src/index.js",
