--- a/packages/nicer-log-remover-babel/package.json
+++ b/packages/nicer-log-remover-babel/package.json
@@ -33,8 +33,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/babel-core": "^6.25.3",
+    "@types/babel-traverse": "^6.25.3",
     "@types/qunit": "^2.0.31",
-    "babel-core": "^6.26.0",
     "ember-cli": "^2.18.0",
     "libkit": "^0.5.18",
     "qunitjs": "^2.4.1",
