--- a/packages/nicer-log-remover-typescript/tsconfig.json
+++ b/packages/nicer-log-remover-typescript/tsconfig.json
@@ -5,7 +5,7 @@
     /* Basic Options */
     "target": "es2015",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
     // "module": "es2015",                    /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "lib": ["es2015", "es2016.array.include"],/* Specify library files to be included in the compilation */
+    // "lib": [],                             /* Specify library files to be included in the compilation */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -37,7 +37,7 @@
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./",                          /* Base directory to resolve non-absolute module names. */
     "paths": {                                /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-      "nicer-log-typescript-remover": ["src/index.ts"]
+      "nicer-log-remover-typescript": ["src/index.ts"]
     },
     "rootDirs": [                             /* List of root folders whose combined content represents the structure of the project at runtime. */
       "src",
