--- a/packages/nicer-log/tsconfig.json
+++ b/packages/nicer-log/tsconfig.json
@@ -37,7 +37,8 @@
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./",                          /* Base directory to resolve non-absolute module names. */
     "paths": {                                /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-      "nicer-log": ["src/index.ts"]
+      "nicer-log": ["src/index.ts"],
+      "easy-crc32": ["typings/easy-crc32.d.ts"]
     },
     "rootDirs": [                             /* List of root folders whose combined content represents the structure of the project at runtime. */
       "src",
