--- a/packages/nicer-log-remover-typescript/package.json
+++ b/packages/nicer-log-remover-typescript/package.json
@@ -32,13 +32,16 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/qunit": "^2.0.31",
-    "ember-cli": "^2.18.0",
-    "libkit": "^0.5.18",
-    "prettier": "^1.10.2",
-    "qunitjs": "^2.4.1",
-    "shelljs": "^0.7.8",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "@types/qunit": "^2.5.3",
+    "ember-cli": "^3.4.3",
+    "libkit": "^0.7.0-beta.2",
+    "prettier": "^1.14.3",
+    "qunit": "^2.6.2",
+    "shelljs": "^0.8.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.1"
+  },
+  "dependencies": {
+    "ts-std": "^0.7.0"
   }
 }
